2008-05-22  Albert Chu <chu11@llnl.gov>

	* common/src/tool-config-file-common.c: Minor tweaks.

	* common/doc/: More manpage updates.

	* ipmi-oem/, ipmi-chassis/, bmc-info/, bmc-device/, ipmi-raw/: Add
	config file support.

	* doc/freeipmi.conf.5.pre.in: Update appropriately for additions.
	
2008-05-21  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-ignore-sdr-cache.man: Fix option
	description typo.

	* common/src/tool-sdr-cache-common.c (sdr_cache_flush_cache),
	ipmimonitoring/, ipmi-fru/, ipmi-sel/, ipmi-sensors/,
	ipmi-sensors-config/: Fix --quiet-cache to work with flush option.

	* ipmipower/src/ipmipower_config.h,
	ipmipower/src/ipmipower_config.c: Rename to ipmipower_arg.h and
	ipmipower_arg.c for consistency to other tools.  Rename functions
	appropriately.
	
2008-05-21  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.conf.5.pre.in: New file.

	* freeipmi.spec.in, configure.ac, doc/Makefile.am: Adjust for new manpage.

	* doc/freeipmi.7.pre.in: Fix typo.

	* ipmiconsole/, ipmipower/: Adjust manpages appropriately.  Fix
	some typos along the way.

	* Globally clarify that --disable-auto-probe is for in-band only.

2008-05-21  Albert Chu <chu11@llnl.gov>

	* common/src/tool-config-file-common.h,
	common/src/tool-config-file-common.c: Final initial tweaks.  Add
	ipmiconsole support.

	* ipmiconsole/: Support config file via common lib.

	* common/src/conffile.c: Update lib.

	* common/src/tool-config-file-common.h,
        common/src/tool-config-file-common.c: Add SDR and
        Hostrange configuration.

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Rename 'sdr_cache_dir' to
	'sdr_cache_directory' globally for consistency.  Rename
	'hostrange_output' to just 'output' for consistency.  Remove
	excessive use of "wanted" suffix in variables.

	* Adjust for variable name changes appropriately in all tools.
	Remove excessive use of "wanted" suffix in variables.

	* common/src/tool-cmdline-common.c (verify_hostrange_cmd_args):